
#firsttime
cmake_minimum_required(VERSION 3.10)
set(CMAKE_CPP_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
project(robot)

file(GLOB_RECURSE SOURCES "src/main/cpp/*.cpp")
add_executable(robot ${SOURCES})
set_property(TARGET robot PROPERTY CXX_STANDARD 20)
target_compile_options(robot PUBLIC -Wno-psabi)
include_directories(src/main/cpp)

include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/visa")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/netcomm")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/chipobject")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpiutil-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpimath-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpilibc-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/cscore-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/ntcore-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/cameraserver-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpilibNewCommands-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/hal-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpiapi-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpinet-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/api-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/opencv-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/cci")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpiapi-cpp-sim")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/cci-sim")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/tools")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/api-cpp-sim")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/simTalonSRX")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/tools-sim")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/simTalonFX")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/simVictorSPX")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/simPigeonIMU")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/simProTalonFX")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpiapi-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/simCANCoder")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/simProCANcoder")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/simProPigeon2")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpiapi-cpp-sim")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/REVLib-driver")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/REVLib-cpp")
include_directories(SYSTEM "c:/Users/progr/Developer/vscode-miscar/src/main/cpp")
include_directories(SYSTEM "c:/Users/progr/Developer/libmiscar/src/main/cpp")
if(IS_ROBORIO)



add_library(visa_libvisa STATIC IMPORTED)
set_property(TARGET visa_libvisa PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/visa/linux/athena/shared/libvisa.so.23.3.0")
set_target_properties(visa_libvisa PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot visa_libvisa)


add_library(netcomm_libFRC_NetworkCommunication STATIC IMPORTED)
set_property(TARGET netcomm_libFRC_NetworkCommunication PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/netcomm/linux/athena/shared/libFRC_NetworkCommunication.so.24.0.0")
set_target_properties(netcomm_libFRC_NetworkCommunication PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot netcomm_libFRC_NetworkCommunication)


add_library(chipobject_libRoboRIO_FRC_ChipObject STATIC IMPORTED)
set_property(TARGET chipobject_libRoboRIO_FRC_ChipObject PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/chipobject/linux/athena/shared/libRoboRIO_FRC_ChipObject.so.24.0.0")
set_target_properties(chipobject_libRoboRIO_FRC_ChipObject PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot chipobject_libRoboRIO_FRC_ChipObject)


add_library(runtime_libembcanshim STATIC IMPORTED)
set_property(TARGET runtime_libembcanshim PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/runtime/linux/athena/shared/libembcanshim.so")
set_target_properties(runtime_libembcanshim PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot runtime_libembcanshim)


add_library(runtime_libfpgalvshim STATIC IMPORTED)
set_property(TARGET runtime_libfpgalvshim PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/runtime/linux/athena/shared/libfpgalvshim.so")
set_target_properties(runtime_libfpgalvshim PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot runtime_libfpgalvshim)


add_library(wpilibc-cpp_libwpilibc STATIC IMPORTED)
set_property(TARGET wpilibc-cpp_libwpilibc PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpilibc-cpp/linux/athena/shared/libwpilibc.so")
set_target_properties(wpilibc-cpp_libwpilibc PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpilibc-cpp_libwpilibc)


add_library(wpiutil-cpp_libwpiutil STATIC IMPORTED)
set_property(TARGET wpiutil-cpp_libwpiutil PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpiutil-cpp/linux/athena/shared/libwpiutil.so")
set_target_properties(wpiutil-cpp_libwpiutil PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiutil-cpp_libwpiutil)


add_library(wpiutil-cpp_libwpiutiljni STATIC IMPORTED)
set_property(TARGET wpiutil-cpp_libwpiutiljni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpiutil-cpp/linux/athena/shared/libwpiutiljni.so")
set_target_properties(wpiutil-cpp_libwpiutiljni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiutil-cpp_libwpiutiljni)


add_library(cameraserver-cpp_libcameraserver STATIC IMPORTED)
set_property(TARGET cameraserver-cpp_libcameraserver PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/cameraserver-cpp/linux/athena/shared/libcameraserver.so")
set_target_properties(cameraserver-cpp_libcameraserver PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cameraserver-cpp_libcameraserver)


add_library(hal-cpp_libwpiHal STATIC IMPORTED)
set_property(TARGET hal-cpp_libwpiHal PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/hal-cpp/linux/athena/shared/libwpiHal.so")
set_target_properties(hal-cpp_libwpiHal PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot hal-cpp_libwpiHal)


add_library(hal-cpp_libwpiHaljni STATIC IMPORTED)
set_property(TARGET hal-cpp_libwpiHaljni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/hal-cpp/linux/athena/shared/libwpiHaljni.so")
set_target_properties(hal-cpp_libwpiHaljni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot hal-cpp_libwpiHaljni)


add_library(ntcore-cpp_libntcore STATIC IMPORTED)
set_property(TARGET ntcore-cpp_libntcore PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/ntcore-cpp/linux/athena/shared/libntcore.so")
set_target_properties(ntcore-cpp_libntcore PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot ntcore-cpp_libntcore)


add_library(ntcore-cpp_libntcorejni STATIC IMPORTED)
set_property(TARGET ntcore-cpp_libntcorejni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/ntcore-cpp/linux/athena/shared/libntcorejni.so")
set_target_properties(ntcore-cpp_libntcorejni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot ntcore-cpp_libntcorejni)


add_library(cscore-cpp_libcscore STATIC IMPORTED)
set_property(TARGET cscore-cpp_libcscore PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/cscore-cpp/linux/athena/shared/libcscore.so")
set_target_properties(cscore-cpp_libcscore PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cscore-cpp_libcscore)


add_library(cscore-cpp_libcscorejni STATIC IMPORTED)
set_property(TARGET cscore-cpp_libcscorejni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/cscore-cpp/linux/athena/shared/libcscorejni.so")
set_target_properties(cscore-cpp_libcscorejni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cscore-cpp_libcscorejni)


add_library(wpimath-cpp_libwpimath STATIC IMPORTED)
set_property(TARGET wpimath-cpp_libwpimath PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpimath-cpp/linux/athena/shared/libwpimath.so")
set_target_properties(wpimath-cpp_libwpimath PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpimath-cpp_libwpimath)


add_library(wpimath-cpp_libwpimathjni STATIC IMPORTED)
set_property(TARGET wpimath-cpp_libwpimathjni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpimath-cpp/linux/athena/shared/libwpimathjni.so")
set_target_properties(wpimath-cpp_libwpimathjni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpimath-cpp_libwpimathjni)


add_library(api-cpp_libCTRE_Phoenix STATIC IMPORTED)
set_property(TARGET api-cpp_libCTRE_Phoenix PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/api-cpp/linux/athena/shared/libCTRE_Phoenix.so")
set_target_properties(api-cpp_libCTRE_Phoenix PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot api-cpp_libCTRE_Phoenix)


add_library(wpinet-cpp_libwpinet STATIC IMPORTED)
set_property(TARGET wpinet-cpp_libwpinet PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpinet-cpp/linux/athena/shared/libwpinet.so")
set_target_properties(wpinet-cpp_libwpinet PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpinet-cpp_libwpinet)


add_library(wpinet-cpp_libwpinetjni STATIC IMPORTED)
set_property(TARGET wpinet-cpp_libwpinetjni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpinet-cpp/linux/athena/shared/libwpinetjni.so")
set_target_properties(wpinet-cpp_libwpinetjni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpinet-cpp_libwpinetjni)


add_library(wpilibNewCommands-cpp_libwpilibNewCommands STATIC IMPORTED)
set_property(TARGET wpilibNewCommands-cpp_libwpilibNewCommands PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpilibNewCommands-cpp/linux/athena/shared/libwpilibNewCommands.so")
set_target_properties(wpilibNewCommands-cpp_libwpilibNewCommands PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpilibNewCommands-cpp_libwpilibNewCommands)


add_library(wpiapi-cpp_libCTRE_Phoenix6_WPI STATIC IMPORTED)
set_property(TARGET wpiapi-cpp_libCTRE_Phoenix6_WPI PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpiapi-cpp/linux/athena/shared/libCTRE_Phoenix6_WPI.so")
set_target_properties(wpiapi-cpp_libCTRE_Phoenix6_WPI PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiapi-cpp_libCTRE_Phoenix6_WPI)


add_library(opencv-cpp_libopencv_aruco STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_aruco PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_aruco.so.4.8")
set_target_properties(opencv-cpp_libopencv_aruco PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_aruco)


add_library(opencv-cpp_libopencv_calib3d STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_calib3d PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_calib3d.so.4.8")
set_target_properties(opencv-cpp_libopencv_calib3d PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_calib3d)


add_library(opencv-cpp_libopencv_core STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_core PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_core.so.4.8")
set_target_properties(opencv-cpp_libopencv_core PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_core)


add_library(opencv-cpp_libopencv_dnn STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_dnn PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_dnn.so.4.8")
set_target_properties(opencv-cpp_libopencv_dnn PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_dnn)


add_library(opencv-cpp_libopencv_features2d STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_features2d PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_features2d.so.4.8")
set_target_properties(opencv-cpp_libopencv_features2d PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_features2d)


add_library(opencv-cpp_libopencv_flann STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_flann PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_flann.so.4.8")
set_target_properties(opencv-cpp_libopencv_flann PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_flann)


add_library(opencv-cpp_libopencv_gapi STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_gapi PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_gapi.so.4.8")
set_target_properties(opencv-cpp_libopencv_gapi PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_gapi)


add_library(opencv-cpp_libopencv_highgui STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_highgui PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_highgui.so.4.8")
set_target_properties(opencv-cpp_libopencv_highgui PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_highgui)


add_library(opencv-cpp_libopencv_imgcodecs STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_imgcodecs PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_imgcodecs.so.4.8")
set_target_properties(opencv-cpp_libopencv_imgcodecs PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_imgcodecs)


add_library(opencv-cpp_libopencv_imgproc STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_imgproc PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_imgproc.so.4.8")
set_target_properties(opencv-cpp_libopencv_imgproc PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_imgproc)


add_library(opencv-cpp_libopencv_ml STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_ml PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_ml.so.4.8")
set_target_properties(opencv-cpp_libopencv_ml PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_ml)


add_library(opencv-cpp_libopencv_objdetect STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_objdetect PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_objdetect.so.4.8")
set_target_properties(opencv-cpp_libopencv_objdetect PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_objdetect)


add_library(opencv-cpp_libopencv_photo STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_photo PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_photo.so.4.8")
set_target_properties(opencv-cpp_libopencv_photo PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_photo)


add_library(opencv-cpp_libopencv_stitching STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_stitching PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_stitching.so.4.8")
set_target_properties(opencv-cpp_libopencv_stitching PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_stitching)


add_library(opencv-cpp_libopencv_video STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_video PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_video.so.4.8")
set_target_properties(opencv-cpp_libopencv_video PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_video)


add_library(opencv-cpp_libopencv_videoio STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_videoio PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_videoio.so.4.8")
set_target_properties(opencv-cpp_libopencv_videoio PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_videoio)


add_library(cci_libCTRE_PhoenixCCI STATIC IMPORTED)
set_property(TARGET cci_libCTRE_PhoenixCCI PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/cci/linux/athena/shared/libCTRE_PhoenixCCI.so")
set_target_properties(cci_libCTRE_PhoenixCCI PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cci_libCTRE_PhoenixCCI)


add_library(tools_libCTRE_PhoenixTools STATIC IMPORTED)
set_property(TARGET tools_libCTRE_PhoenixTools PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/tools/linux/athena/shared/libCTRE_PhoenixTools.so")
set_target_properties(tools_libCTRE_PhoenixTools PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot tools_libCTRE_PhoenixTools)


add_library(wpiapi-cpp_libCTRE_Phoenix6_WPI STATIC IMPORTED)
set_property(TARGET wpiapi-cpp_libCTRE_Phoenix6_WPI PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpiapi-cpp/linux/athena/shared/libCTRE_Phoenix6_WPI.so")
set_target_properties(wpiapi-cpp_libCTRE_Phoenix6_WPI PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiapi-cpp_libCTRE_Phoenix6_WPI)


add_library(REVLib-driver_libREVLibDriver STATIC IMPORTED)
set_property(TARGET REVLib-driver_libREVLibDriver PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/REVLib-driver/linux/athena/shared/libREVLibDriver.so")
set_target_properties(REVLib-driver_libREVLibDriver PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot REVLib-driver_libREVLibDriver)


add_library(REVLib-cpp_libREVLib STATIC IMPORTED)
set_property(TARGET REVLib-cpp_libREVLib PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/REVLib-cpp/linux/athena/shared/libREVLib.so")
set_target_properties(REVLib-cpp_libREVLib PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot REVLib-cpp_libREVLib)
else()
add_library(wpiutil-cpp_wpiutil STATIC IMPORTED)
set_property(TARGET wpiutil-cpp_wpiutil PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpiutil-cpp/windows/x86-64/shared/wpiutil.lib")
set_target_properties(wpiutil-cpp_wpiutil PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiutil-cpp_wpiutil)
add_library(wpiutil-cpp_wpiutiljni STATIC IMPORTED)
set_property(TARGET wpiutil-cpp_wpiutiljni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpiutil-cpp/windows/x86-64/shared/wpiutiljni.lib")
set_target_properties(wpiutil-cpp_wpiutiljni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiutil-cpp_wpiutiljni)
add_library(wpilibc-cpp_wpilibc STATIC IMPORTED)
set_property(TARGET wpilibc-cpp_wpilibc PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpilibc-cpp/windows/x86-64/shared/wpilibc.lib")
set_target_properties(wpilibc-cpp_wpilibc PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpilibc-cpp_wpilibc)
add_library(cameraserver-cpp_cameraserver STATIC IMPORTED)
set_property(TARGET cameraserver-cpp_cameraserver PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/cameraserver-cpp/windows/x86-64/shared/cameraserver.lib")
set_target_properties(cameraserver-cpp_cameraserver PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cameraserver-cpp_cameraserver)
add_library(hal-cpp_wpiHal STATIC IMPORTED)
set_property(TARGET hal-cpp_wpiHal PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/hal-cpp/windows/x86-64/shared/wpiHal.lib")
set_target_properties(hal-cpp_wpiHal PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot hal-cpp_wpiHal)
add_library(hal-cpp_wpiHaljni STATIC IMPORTED)
set_property(TARGET hal-cpp_wpiHaljni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/hal-cpp/windows/x86-64/shared/wpiHaljni.lib")
set_target_properties(hal-cpp_wpiHaljni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot hal-cpp_wpiHaljni)
add_library(cscore-cpp_cscore STATIC IMPORTED)
set_property(TARGET cscore-cpp_cscore PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/cscore-cpp/windows/x86-64/shared/cscore.lib")
set_target_properties(cscore-cpp_cscore PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cscore-cpp_cscore)
add_library(cscore-cpp_cscorejni STATIC IMPORTED)
set_property(TARGET cscore-cpp_cscorejni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/cscore-cpp/windows/x86-64/shared/cscorejni.lib")
set_target_properties(cscore-cpp_cscorejni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cscore-cpp_cscorejni)
add_library(ntcore-cpp_ntcore STATIC IMPORTED)
set_property(TARGET ntcore-cpp_ntcore PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/ntcore-cpp/windows/x86-64/shared/ntcore.lib")
set_target_properties(ntcore-cpp_ntcore PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot ntcore-cpp_ntcore)
add_library(ntcore-cpp_ntcorejni STATIC IMPORTED)
set_property(TARGET ntcore-cpp_ntcorejni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/ntcore-cpp/windows/x86-64/shared/ntcorejni.lib")
set_target_properties(ntcore-cpp_ntcorejni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot ntcore-cpp_ntcorejni)
add_library(wpimath-cpp_wpimath STATIC IMPORTED)
set_property(TARGET wpimath-cpp_wpimath PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpimath-cpp/windows/x86-64/shared/wpimath.lib")
set_target_properties(wpimath-cpp_wpimath PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpimath-cpp_wpimath)
add_library(wpimath-cpp_wpimathjni STATIC IMPORTED)
set_property(TARGET wpimath-cpp_wpimathjni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpimath-cpp/windows/x86-64/shared/wpimathjni.lib")
set_target_properties(wpimath-cpp_wpimathjni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpimath-cpp_wpimathjni)
add_library(wpiapi-cpp_CTRE_Phoenix6_WPI STATIC IMPORTED)
set_property(TARGET wpiapi-cpp_CTRE_Phoenix6_WPI PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpiapi-cpp/windows/x86-64/shared/CTRE_Phoenix6_WPI.lib")
set_target_properties(wpiapi-cpp_CTRE_Phoenix6_WPI PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiapi-cpp_CTRE_Phoenix6_WPI)
add_library(wpinet-cpp_wpinet STATIC IMPORTED)
set_property(TARGET wpinet-cpp_wpinet PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpinet-cpp/windows/x86-64/shared/wpinet.lib")
set_target_properties(wpinet-cpp_wpinet PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpinet-cpp_wpinet)
add_library(wpinet-cpp_wpinetjni STATIC IMPORTED)
set_property(TARGET wpinet-cpp_wpinetjni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpinet-cpp/windows/x86-64/shared/wpinetjni.lib")
set_target_properties(wpinet-cpp_wpinetjni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpinet-cpp_wpinetjni)
add_library(wpilibNewCommands-cpp_wpilibNewCommands STATIC IMPORTED)
set_property(TARGET wpilibNewCommands-cpp_wpilibNewCommands PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpilibNewCommands-cpp/windows/x86-64/shared/wpilibNewCommands.lib")
set_target_properties(wpilibNewCommands-cpp_wpilibNewCommands PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpilibNewCommands-cpp_wpilibNewCommands)
add_library(api-cpp_CTRE_Phoenix STATIC IMPORTED)
set_property(TARGET api-cpp_CTRE_Phoenix PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/api-cpp/windows/x86-64/shared/CTRE_Phoenix.lib")
set_target_properties(api-cpp_CTRE_Phoenix PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot api-cpp_CTRE_Phoenix)
add_library(opencv-cpp_opencv_aruco480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_aruco480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_aruco480.lib")
set_target_properties(opencv-cpp_opencv_aruco480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_aruco480)
add_library(opencv-cpp_opencv_calib3d480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_calib3d480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_calib3d480.lib")
set_target_properties(opencv-cpp_opencv_calib3d480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_calib3d480)
add_library(opencv-cpp_opencv_core480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_core480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_core480.lib")
set_target_properties(opencv-cpp_opencv_core480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_core480)
add_library(opencv-cpp_opencv_dnn480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_dnn480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_dnn480.lib")
set_target_properties(opencv-cpp_opencv_dnn480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_dnn480)
add_library(opencv-cpp_opencv_features2d480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_features2d480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_features2d480.lib")
set_target_properties(opencv-cpp_opencv_features2d480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_features2d480)
add_library(opencv-cpp_opencv_flann480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_flann480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_flann480.lib")
set_target_properties(opencv-cpp_opencv_flann480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_flann480)
add_library(opencv-cpp_opencv_gapi480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_gapi480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_gapi480.lib")
set_target_properties(opencv-cpp_opencv_gapi480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_gapi480)
add_library(opencv-cpp_opencv_highgui480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_highgui480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_highgui480.lib")
set_target_properties(opencv-cpp_opencv_highgui480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_highgui480)
add_library(opencv-cpp_opencv_imgcodecs480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_imgcodecs480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_imgcodecs480.lib")
set_target_properties(opencv-cpp_opencv_imgcodecs480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_imgcodecs480)
add_library(opencv-cpp_opencv_imgproc480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_imgproc480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_imgproc480.lib")
set_target_properties(opencv-cpp_opencv_imgproc480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_imgproc480)
add_library(opencv-cpp_opencv_ml480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_ml480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_ml480.lib")
set_target_properties(opencv-cpp_opencv_ml480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_ml480)
add_library(opencv-cpp_opencv_objdetect480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_objdetect480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_objdetect480.lib")
set_target_properties(opencv-cpp_opencv_objdetect480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_objdetect480)
add_library(opencv-cpp_opencv_photo480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_photo480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_photo480.lib")
set_target_properties(opencv-cpp_opencv_photo480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_photo480)
add_library(opencv-cpp_opencv_stitching480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_stitching480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_stitching480.lib")
set_target_properties(opencv-cpp_opencv_stitching480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_stitching480)
add_library(opencv-cpp_opencv_video480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_video480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_video480.lib")
set_target_properties(opencv-cpp_opencv_video480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_video480)
add_library(opencv-cpp_opencv_videoio480 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_videoio480 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_videoio480.lib")
set_target_properties(opencv-cpp_opencv_videoio480 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_videoio480)
add_library(cci_CTRE_PhoenixCCI STATIC IMPORTED)
set_property(TARGET cci_CTRE_PhoenixCCI PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/cci/windows/x86-64/shared/CTRE_PhoenixCCI.lib")
set_target_properties(cci_CTRE_PhoenixCCI PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cci_CTRE_PhoenixCCI)
add_library(tools_CTRE_PhoenixTools STATIC IMPORTED)
set_property(TARGET tools_CTRE_PhoenixTools PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/tools/windows/x86-64/shared/CTRE_PhoenixTools.lib")
set_target_properties(tools_CTRE_PhoenixTools PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot tools_CTRE_PhoenixTools)
add_library(wpiapi-cpp-sim_CTRE_Phoenix6_WPISim STATIC IMPORTED)
set_property(TARGET wpiapi-cpp-sim_CTRE_Phoenix6_WPISim PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpiapi-cpp-sim/windows/x86-64/shared/CTRE_Phoenix6_WPISim.lib")
set_target_properties(wpiapi-cpp-sim_CTRE_Phoenix6_WPISim PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiapi-cpp-sim_CTRE_Phoenix6_WPISim)
add_library(api-cpp-sim_CTRE_PhoenixSim STATIC IMPORTED)
set_property(TARGET api-cpp-sim_CTRE_PhoenixSim PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/api-cpp-sim/windows/x86-64/shared/CTRE_PhoenixSim.lib")
set_target_properties(api-cpp-sim_CTRE_PhoenixSim PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot api-cpp-sim_CTRE_PhoenixSim)
add_library(cci-sim_CTRE_PhoenixCCISim STATIC IMPORTED)
set_property(TARGET cci-sim_CTRE_PhoenixCCISim PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/cci-sim/windows/x86-64/shared/CTRE_PhoenixCCISim.lib")
set_target_properties(cci-sim_CTRE_PhoenixCCISim PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cci-sim_CTRE_PhoenixCCISim)
add_library(simTalonSRX_CTRE_SimTalonSRX STATIC IMPORTED)
set_property(TARGET simTalonSRX_CTRE_SimTalonSRX PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/simTalonSRX/windows/x86-64/shared/CTRE_SimTalonSRX.lib")
set_target_properties(simTalonSRX_CTRE_SimTalonSRX PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot simTalonSRX_CTRE_SimTalonSRX)
add_library(tools-sim_CTRE_PhoenixTools_Sim STATIC IMPORTED)
set_property(TARGET tools-sim_CTRE_PhoenixTools_Sim PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/tools-sim/windows/x86-64/shared/CTRE_PhoenixTools_Sim.lib")
set_target_properties(tools-sim_CTRE_PhoenixTools_Sim PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot tools-sim_CTRE_PhoenixTools_Sim)
add_library(simPigeonIMU_CTRE_SimPigeonIMU STATIC IMPORTED)
set_property(TARGET simPigeonIMU_CTRE_SimPigeonIMU PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/simPigeonIMU/windows/x86-64/shared/CTRE_SimPigeonIMU.lib")
set_target_properties(simPigeonIMU_CTRE_SimPigeonIMU PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot simPigeonIMU_CTRE_SimPigeonIMU)
add_library(simTalonFX_CTRE_SimTalonFX STATIC IMPORTED)
set_property(TARGET simTalonFX_CTRE_SimTalonFX PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/simTalonFX/windows/x86-64/shared/CTRE_SimTalonFX.lib")
set_target_properties(simTalonFX_CTRE_SimTalonFX PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot simTalonFX_CTRE_SimTalonFX)
add_library(simVictorSPX_CTRE_SimVictorSPX STATIC IMPORTED)
set_property(TARGET simVictorSPX_CTRE_SimVictorSPX PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/simVictorSPX/windows/x86-64/shared/CTRE_SimVictorSPX.lib")
set_target_properties(simVictorSPX_CTRE_SimVictorSPX PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot simVictorSPX_CTRE_SimVictorSPX)
add_library(simCANCoder_CTRE_SimCANCoder STATIC IMPORTED)
set_property(TARGET simCANCoder_CTRE_SimCANCoder PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/simCANCoder/windows/x86-64/shared/CTRE_SimCANCoder.lib")
set_target_properties(simCANCoder_CTRE_SimCANCoder PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot simCANCoder_CTRE_SimCANCoder)
add_library(simProTalonFX_CTRE_SimProTalonFX STATIC IMPORTED)
set_property(TARGET simProTalonFX_CTRE_SimProTalonFX PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/simProTalonFX/windows/x86-64/shared/CTRE_SimProTalonFX.lib")
set_target_properties(simProTalonFX_CTRE_SimProTalonFX PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot simProTalonFX_CTRE_SimProTalonFX)
add_library(simProCANcoder_CTRE_SimProCANcoder STATIC IMPORTED)
set_property(TARGET simProCANcoder_CTRE_SimProCANcoder PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/simProCANcoder/windows/x86-64/shared/CTRE_SimProCANcoder.lib")
set_target_properties(simProCANcoder_CTRE_SimProCANcoder PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot simProCANcoder_CTRE_SimProCANcoder)
add_library(simProPigeon2_CTRE_SimProPigeon2 STATIC IMPORTED)
set_property(TARGET simProPigeon2_CTRE_SimProPigeon2 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/simProPigeon2/windows/x86-64/shared/CTRE_SimProPigeon2.lib")
set_target_properties(simProPigeon2_CTRE_SimProPigeon2 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot simProPigeon2_CTRE_SimProPigeon2)
add_library(wpiapi-cpp_CTRE_Phoenix6_WPI STATIC IMPORTED)
set_property(TARGET wpiapi-cpp_CTRE_Phoenix6_WPI PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpiapi-cpp/windows/x86-64/shared/CTRE_Phoenix6_WPI.lib")
set_target_properties(wpiapi-cpp_CTRE_Phoenix6_WPI PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiapi-cpp_CTRE_Phoenix6_WPI)
add_library(wpiapi-cpp-sim_CTRE_Phoenix6_WPISim STATIC IMPORTED)
set_property(TARGET wpiapi-cpp-sim_CTRE_Phoenix6_WPISim PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpiapi-cpp-sim/windows/x86-64/shared/CTRE_Phoenix6_WPISim.lib")
set_target_properties(wpiapi-cpp-sim_CTRE_Phoenix6_WPISim PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiapi-cpp-sim_CTRE_Phoenix6_WPISim)
add_library(REVLib-cpp_REVLib STATIC IMPORTED)
set_property(TARGET REVLib-cpp_REVLib PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/REVLib-cpp/windows/x86-64/shared/REVLib.lib")
set_target_properties(REVLib-cpp_REVLib PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot REVLib-cpp_REVLib)
add_library(REVLib-driver_REVLibDriver STATIC IMPORTED)
set_property(TARGET REVLib-driver_REVLibDriver PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/REVLib-driver/windows/x86-64/shared/REVLibDriver.lib")
set_target_properties(REVLib-driver_REVLibDriver PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot REVLib-driver_REVLibDriver) 



endif()